--- a/src/patternfly/components/Brand/brand.hbs
+++ b/src/patternfly/components/Brand/brand.hbs
@@ -15,6 +15,8 @@
       <img src="/assets/images/pf_logo.svg" alt="Fallback patternFly default logo">
     {{/if}}
   </picture>
+{{else if brand--IsSVG}}
+  {{> masthead-logo masthead-logo--modifier=(concat 'pf-v5-c-brand') masthead-logo--attribute=brand--attribute masthead-logo--title=brand--AltText}}
 {{else}}
   <img class="{{pfv}}brand{{#if brand--modifier}} {{brand--modifier}}{{/if}}"
     {{#if brand--attribute}}
