--- a/src/patternfly/components/Masthead/masthead-logo.hbs
+++ b/src/patternfly/components/Masthead/masthead-logo.hbs
@@ -1,6 +1,6 @@
 
-<svg height="40px" viewBox="0 0 679 158">
-    <title>PF-HorizontalLogo-Color </title>
+<svg height="40px" viewBox="0 0 679 158"{{#if masthead-logo--modifier}} class="{{masthead-logo--modifier}}"{{/if}} {{#if masthead-logo--attribute}} {{{masthead-logo--attribute}}}{{/if}}>
+    <title>{{#if masthead-logo--title}}{{masthead-logo--title}}{{else}}PF-HorizontalLogo-Color{{/if}}</title>
     <defs>
         <linearGradient x1="68%" y1="2.25860997e-13%" x2="32%" y2="100%" id="linearGradient-{{masthead--id}}">
             <stop stop-color="#2B9AF3" offset="0%"></stop>
