chore(button): added outline offset for inline link

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -332,6 +332,7 @@
       text-align: start;
       white-space: normal;
       cursor: pointer;
+      outline-offset: #{pf-size-prem(2px)};
     }
 
     &:where(.pf-m-danger) {
